@@ -5,6 +5,12 @@ FlightPath 5.x Changelog
   Made tweaks to advising screen to make CSS re-themeing easier, and to make adding "extra html" easier to the group
   list popups as well as other areas.
   
+  Made it so that function module_implements_hook() caches what it finds, at least for that one page load.  Helps speed up
+  a little bit.
+  
+  Added new hook: hook_translate.  Called by t() function.
+  
+  
 
 2016-06-29
   Fixed bug in Substitution system for split transfer subs, where hours were not being reported correctly.
